Added link to blog post

--- a/haystack-starwars.ipynb
+++ b/haystack-starwars.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Using Haystack and the Astra DB integration to build a simple Star Wars RAG\n",
     "\n",
-    "Author: [Carter Rabasa](https://github.com/crtr0)"
+    "Author: [Carter Rabasa](https://github.com/crtr0)\n",
+    "\n",
+    "Blog Post: [datastax.com/blog/using-genai-to-find-a-needle-with-haystack-and-astra-db](https://www.datastax.com/blog/using-genai-to-find-a-needle-with-haystack-and-astra-db)"
    ]
   },
   {
