forgot an import

--- a/Airbyte_xkcd.ipynb
+++ b/Airbyte_xkcd.ipynb
@@ -67,6 +67,7 @@
         "from getpass import getpass\n",
         "from PIL import Image\n",
         "from matplotlib import image as mpimg\n",
+        "from matplotlib import pyplot as plt\n",
         "from urllib.request import urlopen"
       ]
     },
