Update Airbyte_xkcd.ipynb with blog post reference.

--- a/Airbyte_xkcd.ipynb
+++ b/Airbyte_xkcd.ipynb
@@ -20,9 +20,11 @@
         "\n",
         "This notebook will walk through how to build a simple application using a data pipeline from Airbyte Cloud. Our Airbyte Cloud pipeline will pull data from the XKCD API, and store it in Astra DB. Our application will then be able to run similarity searches on the vector embeddings to bring back data on the most-similar XKCD comic.\n",
         "\n",
+        "This notebook is a companion to this blog post: [Airbyte and DataStax simplify GenAI and RAG app development](https://www.datastax.com/blog/airbyte-and-datastax-simplify-genai-and-rag-app-development)",
+        "\n",
         "Requirements:\n",
         "*   A free account and vector database with [Astra DB](https://astra.datastax.com).\n",
-        "*   A free account with [Airbyte](https://www.airbyte.com).\n",
+        "*   A free account with [Airbyte](https://www.airbyte.com), and an Airbyte Cloud pipeline that has synchronized data into Astra DB.\n",
         "*   An [OpenAI](https://openai.com/) API key.\n",
         "\n",
         "## Setup\n",
@@ -231,7 +233,8 @@
         "id": "XfeJNR78xeQk"
       },
       "source": [
-        "## Store and print the result"
+        "## Store and print the result\n",
+        "Be sure that you have run the Airbyte Cloud data pipeline to load data from the XKCD API into Astra DB, first!"
       ]
     },
     {
