adding email address

--- a/raffle.ipynb
+++ b/raffle.ipynb
@@ -184,8 +184,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Enter attendee's name\n",
-        "A vector embedding will be generated for the attendee's name, and it will be stored in Astra DB."
+        "## Enter attendee's name and email\n",
+        "A vector embedding will be generated for the attendee's name and email address, and it will be stored in Astra DB."
       ],
       "metadata": {
         "id": "4iXV4gbIdNWE"
@@ -195,9 +195,10 @@
       "cell_type": "code",
       "source": [
         "name = input(\"Enter attendee's name: \")\n",
+        "email = input(\"Enter attendee's email address: \")\n",
         "\n",
-        "vector_embedding = model.encode(name)\n",
-        "strJson = (f'{{\"_id\":\"{name.replace(\" \",\"\")}\",\"name\":\"{name}\",\"$vector\":{str(vector_embedding.tolist())}}}')\n",
+        "vector_embedding = model.encode(name + email)\n",
+        "strJson = (f'{{\"_id\":\"{name.replace(\" \",\"\")}\",\"name\":\"{name}\",,\"email\":\"{email}\"\"$vector\":{str(vector_embedding.tolist())}}}')\n",
         "doc = json.loads(strJson)\n",
         "\n",
         "collection.insert_one(doc)\n",
@@ -237,7 +238,7 @@
       "cell_type": "code",
       "source": [
         "winner_embedding = model.encode(search_string)\n",
-        "results = collection.vector_find(winner_embedding.tolist(), limit=9, include_similarity=1, fields={\"name\"})\n",
+        "results = collection.vector_find(winner_embedding.tolist(), limit=9, include_similarity=1, fields={\"name\",\"email\"})\n",
         "print(str(results).replace(\"}, {\",\"},\\n{\"))"
       ],
       "metadata": {
