--- a/raffle.ipynb
+++ b/raffle.ipynb
@@ -198,7 +198,7 @@
         "email = input(\"Enter attendee's email address: \")\n",
         "\n",
         "vector_embedding = model.encode(name + email)\n",
-        "strJson = (f'{{\"_id\":\"{name.replace(\" \",\"\")}\",\"name\":\"{name}\",,\"email\":\"{email}\"\"$vector\":{str(vector_embedding.tolist())}}}')\n",
+        "strJson = (f'{{\"_id\":\"{name.replace(\" \",\"\")}\",\"name\":\"{name}\",\"email\":\"{email}\",\"$vector\":{str(vector_embedding.tolist())}}}')\n",
         "doc = json.loads(strJson)\n",
         "\n",
         "collection.insert_one(doc)\n",
