--- a/raffle.ipynb
+++ b/raffle.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/aar0np/genai-cookbook/blob/main/raffle.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -238,8 +227,9 @@
       "cell_type": "code",
       "source": [
         "winner_embedding = model.encode(search_string)\n",
-        "results = collection.vector_find(winner_embedding.tolist(), limit=9, include_similarity=1, fields={\"name\",\"email\"})\n",
-        "print(str(results).replace(\"}, {\",\"},\\n{\"))"
+        "print(winner_embedding.tolist())\n",
+        "#results = collection.vector_find(winner_embedding.tolist(), limit=9, include_similarity=1, fields={\"name\",\"email\"})\n",
+        "#print(str(results).replace(\"}, {\",\"},\\n{\"))"
       ],
       "metadata": {
         "id": "2eeDCduGgi-8"
